feat: chat link

--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,7 @@
                       </svg>
                       <span>Избранное</span>
                   </a>
-                  <a class="header__icon">
+                  <a class="header__icon" data-id="212">
                       <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
                           <path fill-rule="evenodd" clip-rule="evenodd" d="M16 26.375V26.375C9.99337 26.375 5.125 21.5066 5.125 15.5V15.5C5.125 9.49337 9.99337 4.625 16 4.625V4.625C22.0066 4.625 26.875 9.49337 26.875 15.5V15.5C26.875 21.5066 22.0066 26.375 16 26.375Z" stroke="#031E16" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                           <path d="M15.9987 10.667V20.3337" stroke="#031E16" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
